# drasyl-rs

./: Cargo.toml
.github/workflows/: agent.yml  ffi.yml  sdn.yml  sp.yml  sp_docker.yml  test.yml  ui.yml
drasyl-agent/src/agent/: housekeeping.rs
drasyl-agent/src/agent/dns/: embedded.rs  hosts_file.rs  mod.rs
drasyl-bench/: Cargo.toml
drasyl-sdn/: Dockerfile
drasyl-sdn/src/: main.rs
drasyl-sdn/src/rest_api/: auth.rs  client.rs  error.rs  mod.rs  server.rs  status.rs
drasyl-ui/: Cargo.toml
drasyl-ui/resources/info/: exts.plist
drasyl-ui/src/: main.rs
drasyl/src/util/: net.rs
