[package]
name = "drasyl-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
drasyl-sdn = { path = "../drasyl-sdn" }
tokio = { workspace = true }
tray-icon = "0.20.1"
image = "0.25.6"
winit = "0.30.11"
arboard = "3.3.0"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.0"
objc2-core-graphics = { version = "0.3.0", default-features = false, features = [
    "std",
    "CGDirectDisplay",
] }
objc2-core-foundation = { version = "0.3.0", default-features = false, features = [
    "std",
    "CFCGTypes",
    "CFRunLoop",
] }
objc2-foundation = { version = "0.3.0", default-features = false, features = [
    "std",
    "block2",
    "objc2-core-foundation",
    "NSArray",
    "NSData",
    "NSEnumerator",
    "NSGeometry",
    "NSString",
    "NSThread",
] }
objc2-app-kit = { version = "0.3.0", default-features = false, features = [
    "std",
    "objc2-core-foundation",
    "NSButton",
    "NSCell",
    "NSControl",
    "NSEvent",
    "NSImage",
    "NSMenu",
    "NSResponder",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSTrackingArea",
    "NSView",
    "NSWindow",
] }